--- a/src/app/admin/features/special_role/Dialogue/casdialogue/casdialogue.component.html
+++ b/src/app/admin/features/special_role/Dialogue/casdialogue/casdialogue.component.html
@@ -531,7 +531,7 @@
                         <div class="row ">
                             <div class="input_box col-12 col-md-6">
                                 <div class="input_box d-flex justify-content-between align-items-center  mb-3">
-                                    <span>IsEMI</span>
+                                    <span>Isactive</span>
                                     <label class="switch">
                                         <input type="checkbox" [(ngModel)]="isactive"
                                             [ngModelOptions]="{standalone: true}">
