--- a/src/app/admin/features/channel_setting/Reports/msoreports/msoreports.component.html
+++ b/src/app/admin/features/channel_setting/Reports/msoreports/msoreports.component.html
@@ -49,6 +49,7 @@
             <div><strong> Online Payment History</strong> </div>
             <div class="tooltip">Operator/Subscriber/Sublco Online Payment</div>
           </div>
+
           <!-- <div *ngIf="isSpecial " class="card royal-card tooltip-container"
             (click)="openMsoDialog('online_payment')"><i class="fas fa-file-invoice"></i>
             <div><strong> Online Payment History</strong> </div>
@@ -105,6 +106,7 @@
           <div class="tooltip">Unpair Smartcard Recharge</div>
         </div> -->
 
+
         </div>
       </mat-expansion-panel>
     </mat-accordion>
@@ -156,7 +158,7 @@
               class="fas fa-tv"></i>
             <div><strong>Lco Transfer Details Report</strong> </div>
           </div>
-            <div class="card royal-card tooltip-container" (click)="openMsoDialog('repair_smartcard')"><i
+          <div class="card royal-card tooltip-container" (click)="openMsoDialog('repair_smartcard')"><i
               class="fas fa-check-circle"></i>
             <div><strong>Repair Smartcard Report </strong> </div>
           </div>
@@ -172,6 +174,22 @@
         <div class="card"><i class="fas fa-exclamation-circle"></i>
           <div><strong>Not Allocated Smartcard</strong> </div>
         </div> -->
+        </div>
+      </mat-expansion-panel>
+    </mat-accordion>
+  </section>
+  <section *ngIf="isUser">
+    <mat-accordion class="example-headers-align">
+      <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle class="pannel">
+        <mat-expansion-panel-header>
+          <mat-panel-title class="reporthead">LOG REPORTS</mat-panel-title>
+        </mat-expansion-panel-header>
+        <div class="cardContainer">
+          <div class="card royal-card tooltip-container" (click)="openMsoDialog('log')"><i
+              class="fas fa-check-circle"></i>
+            <div><strong> Log</strong> </div>
+          </div>
+          <div class="tooltip">log</div>
         </div>
       </mat-expansion-panel>
     </mat-accordion>
