--- a/src/app/admin/features/channel_setting/_Dialogue/Inventory/allocated-inventory/allocated-inventory.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/Inventory/allocated-inventory/allocated-inventory.component.html
@@ -32,7 +32,7 @@
             </div>
             <div class="col-12 col-md-6">
                 <select id="casType" [(ngModel)]="selectedCasType" (change)="onCasChange()">
-                    <option value="0" selected>Select a CAS Name</option>
+                    <option value="0" selected>Select a CAS </option>
                     <option *ngFor="let key of castype" [value]="key.value">
                         {{ key.name }}
                     </option>
