--- a/src/app/admin/features/inventory/allocated/allocated.component.html
+++ b/src/app/admin/features/inventory/allocated/allocated.component.html
@@ -27,7 +27,7 @@
         <div class="col-12 col-sm-12 col-md-12  m-3">
             <div class="d-flex justify-content-end align-items-center mb-3">
                 <div class="icon-container d-flex align-items-center ">
-                    <button type="button" class="btn  bttn" (click)="submit()"><i class="fa fa-plus"
+                    <button *ngIf="caslist?.length" type="button" class="btn  bttn" (click)="submit()"><i class="fa fa-plus"
                             aria-hidden="true"></i>
                         New
                     </button>
