--- a/src/app/admin/features/channel_setting/_Dialogue/Addon_package/addon-edit/addon-edit.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/Addon_package/addon-edit/addon-edit.component.html
@@ -18,7 +18,7 @@
             </div>
             <div class="col-12 col-md-6">
                 <input type="text" id="addon_package_rate" class="" maxlength="10" pattern="[0-9]*"
-                    (keydown)="onKeydown($event)" [(ngModel)]="addon_package_rate">
+                    (keydown)="onKeydown2($event)" [(ngModel)]="addon_package_rate">
             </div>
         </div>
         <div class="input_box col-12 col-md-12 display mb-1">
