--- a/src/app/admin/features/channel_setting/_Dialogue/package_master/update-package-master/update-package-master.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/package_master/update-package-master/update-package-master.component.html
@@ -22,7 +22,7 @@
             </div>
             <div class="d-flex">
                 <div class="col-5">
-                    <span for="isPercentage">Is Percentage</span>
+                    <span for="isPercentage">Is Active</span>
                 </div>
                 <div class="col-6">
                     <div class="toggle-button-cover">
