--- a/src/app/admin/features/channel_setting/broad-master/broad-master.component.html
+++ b/src/app/admin/features/channel_setting/broad-master/broad-master.component.html
@@ -2,7 +2,7 @@
     <h3>Broadcaster Details</h3>
     <div class="row ">
         <div class="row d-flex align-items-center justify-content-center">
-            <div class=" col-md-2 col-lg-2"></div>
+            <!-- <div class=" col-md-2 col-lg-2"></div> -->
             <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                 <div class="col display justify-content-end align-items-center mb-3">
                     <!-- <div class="d-flex justify-content-start aign-items-center mt-3"
@@ -22,13 +22,24 @@
                         </button>
                     </div>
                 </div>
-                <ag-grid-angular #agGrid id="myGrid" domLayout='normal' class="ag-theme-alpine table-class" rowAnimation
+                <!-- <div class="d-flex justify-content-center">
+                    <ag-grid-angular #agGrid id="myGrid"  class="ag-theme-alpine table-class"
+                        rowAnimation [rowSelection]="rowSelection" [gridOptions]="gridOptions" [columnDefs]="columnDefs"
+                        [rowData]="rowData" (selectionChanged)="onSelectionChanged()" (gridReady)="onGridReady($event)"
+                        [enableCellTextSelection]="true">
+                    </ag-grid-angular>
+                </div> -->
+                <!-- <div class="ag-grid-wrapper"> -->
+                      <ag-grid-angular #agGrid id="myGrid" domLayout='normal' class="ag-theme-alpine table-class"
+                   rowAnimation
                     [rowSelection]="rowSelection" [gridOptions]="gridOptions" [columnDefs]="columnDefs"
                     [rowData]="rowData" (selectionChanged)="onSelectionChanged()" (gridReady)="onGridReady($event)"
                     [enableCellTextSelection]="true">
                 </ag-grid-angular>
+                <!-- </div> -->
+
             </div>
-            <div class=" col-md-2 col-lg-2"></div>
+            <!-- <div class=" col-md-2 col-lg-2"></div> -->
         </div>
     </div>
 </div>
